# LowAltitudeUAV

./: .gitignore  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  tsconfig.json
apps/web/: next.config.ts  package.json
apps/web/.next/dev/: build-manifest.json  prerender-manifest.json  trace
apps/web/.next/dev/cache/: .rscinfo
apps/web/.next/dev/server/: middleware-build-manifest.js  server-reference-manifest.js  server-reference-manifest.json
apps/web/src/app/: globals.css  layout.tsx  page.module.css  page.tsx
apps/web/src/components/: live-clock-time.test.ts
apps/web/src/components/details/: alert-list.tsx  details.module.css  link-detail.tsx  node-summary.tsx  planning-summary.tsx  selection-detail.tsx
apps/web/src/components/layout/: app-header.tsx  bottom-console.tsx  left-sidebar.tsx  live-clock-time.ts  live-clock.tsx  right-sidebar.tsx  workspace-layout.module.css  workspace-layout.tsx
apps/web/src/components/overview/: overview.module.css  planning-controls.tsx  resource-summary.tsx  scenario-summary.tsx  task-list.tsx
apps/web/src/components/topology/: communication-edge.tsx  map-background.tsx  rescue-node.tsx  rescue-workspace-layout.test.ts  topology-canvas.tsx  (+4 more)
apps/web/src/data/: mock-alerts.ts  mock-data.test.ts  mock-events.ts  mock-links.ts  mock-nodes.ts  mock-planning-result.ts  mock-tasks.ts  uav-network-adapter.test.ts  uav-network-adapter.ts
apps/web/src/lib/: results.ts  topology-adapters.ts  topology-filters.ts  topology-layout.ts  topology.test.ts
apps/web/src/stores/: stores.test.ts  use-connection-store.ts  use-dashboard-store.ts  use-planning-store.ts  use-topology-store.ts
apps/web/src/types/: dashboard.ts  rescue.ts  results.ts  topology.ts
configs/: agent1.yaml  agent2.yaml  uav_policy.yaml
docs/: UAV_Semantic_Migration_Plan.md  agent2_rl_design.md  dataset_survey.md  low_altitude_uav_methodology.md  scene_planning_design.md  situational_awareness_workflow.md
hgt_rl_planner/: data_loader.py  environment.py  evaluation_lib.py  models.py  trainer.py
hgt_rl_planner/utils/: data_processing.py  plotting.py  seeding.py
runner/: build_graph.py  classify_concepts.py  evaluate.py  rank_concepts_by_level.py  refine_levels.py  train_encoder.py  train_policy.py
scripts/: build_uav_graph.py  evaluate_uav.py  generate_mock_uav_data.py  train_uav_policy.py  visualize_routing.py
scripts/legacy/: classify_concepts.py  rank_concepts_by_level.py  refine_levels.py  train-MOOCCubex.sh  train_encoder.py
src/SkillOpt/: README.md  pyproject.toml
src/SkillOpt/configs/uav_situation/: default.yaml
src/SkillOpt/scripts/: train.py
src/SkillOpt/skillopt/: __init__.py
src/SkillOpt/skillopt/engine/: trainer.py
src/uav_semantic_planner/agents/: __init__.py  agent1_skill.md  ollama_client.py  situation_assessor.py
src/uav_semantic_planner/data/: data_loader.py  scenario_generator.py
src/uav_semantic_planner/envs/: environment.py
src/uav_semantic_planner/models/: models.py
src/uav_semantic_planner/scripts/: build_agent1_snr_skillopt_data.py  build_uav_graph.py  generate_mock_uav_data.py  run_agent1_demo.py  run_full_pipeline_demo.py  simulate_situational_workflow.py  train_agent1_skillopt.py  train_uav_policy.py  visualize_routing.py
src/uav_semantic_planner/trainer/: trainer.py
src/uav_semantic_planner/utils/: __init__.py  data_processing.py  evaluation_lib.py  plotting.py  routing_planner.py
(+79 files in other folders)
