[project]
name = "low-altitude-uav-workspace"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "uav-semantic-planner",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.uv]
prerelease = "allow"
index-strategy = "unsafe-best-match"

[tool.uv.sources]
cuda-python = { index = "nvidia" }
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }
cudf-cu13 = { index = "nvidia" }
dask-cudf-cu13 = { index = "nvidia" }
cuml-cu13 = { index = "nvidia" }
cugraph-cu13 = { index = "nvidia" }
nx-cugraph-cu13 = { index = "nvidia" }
cuxfilter-cu13 = { index = "nvidia" }
cucim-cu13 = { index = "nvidia" }
pylibraft-cu13 = { index = "nvidia" }
raft-dask-cu13 = { index = "nvidia" }
cuvs-cu13 = { index = "nvidia" }
uav-semantic-planner = { workspace = true, editable = true }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu130"

[[tool.uv.index]]
name = "nvidia"
url = "https://pypi.nvidia.com"

[tool.uv.workspace]
members = ["packages/uav-semantic-planner"]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
]

ignore = [
    "E501", # 行长度交给 formatter
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.ruff.lint.isort]
known-first-party = ["src"]
